# llmkg

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
NOTES/: IDEAS.txt  RESEARCH.txt  TODO.txt
backend/: .flake8  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/alembic/versions/: 7f65c979d7b2_subjects_and_related_subjects.py
backend/app/: database.py  main.py  models.py
backend/app/clients/: openai_client.py
backend/app/repos/: subjects.py
backend/app/routers/: items.py  knowledge_graph.py  subjects.py  test_items.py
backend/scripts/: populate.py  script_utils.py
scripts/: README.md  cli.py  llm_knowledge_graph.py  llm_utils.py  poc_chatgpt_call.py  poc_graph_viz.py  poc_llm_knowledge_graph.py  pyproject.toml  subjpopulate.py
src/: Dockerfile  Makefile  README.md  go.mod  go.sum  openapi-schema.yaml
src/cmd/serverd/: main.go
src/cmd/subjpopulate/: subjpopulate.go
src/cmd/testclient/: main.go  testclient.go
src/cmd/testclientd/: testclient.go
src/internal/dependencies/: dependencies.go
src/internal/models/: models.go
src/internal/openapi/: handlers.go
src/internal/openapi/ogen/: oas_client_gen.go  oas_handlers_gen.go  oas_interfaces_gen.go  oas_json_gen.go  oas_operations_gen.go  oas_parameters_gen.go  oas_request_decoders_gen.go  oas_request_encoders_gen.go  oas_response_decoders_gen.go  oas_response_encoders_gen.go  oas_router_gen.go  oas_schemas_gen.go  oas_server_gen.go  oas_unimplemented_gen.go  oas_validators_gen.go
src/internal/repos/: subjects.go
src/migrations/: 000004_subject.up.sql  000005_subject_relation.down.sql  000005_subject_relation.up.sql
streamlit/: .env.example  README.md  poc_llm_knowledge_graph.py  poc_stemming.py  populate.py  pyproject.toml
